2008-12-16  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gdk-pixbuf-2.0/:

	Fix gdk_pixbuf_new_from_stream* bindings, patch by Evan Nemerson,
	fixes bug 560721

	* vapi/gdk-pixbuf-2.0.vapi: regenerated

2008-12-16  Jürg Billeter  <j@bitron.ch>

	* vala/valafield.vala:
	* gobject/valaccodebasemodule.vala:

	Fix crash and temporary variable declarations when using struct
	initialization methods in field initializer, fixes bug 559459

2008-12-16  Jürg Billeter  <j@bitron.ch>

	* vapigen/valagidlparser.vala:

	Extend metadata support for delegates

	* vapi/packages/libnotify/:

	Fix NotifyActionCallback and notify_notification_add_action
	bindings, fixes bug 562726

	* vapi/libnotify.vapi: regenerated

2008-12-16  Jürg Billeter  <j@bitron.ch>

	* vapigen/valagirparser.vala:

	Fix crash when parsing metadata, fixes bug 563390

2008-12-16  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodemethodcallmodule.vala:

	Fix crash when using out parameters in delegates,
	fixes bug 563705

2008-12-16  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gstreamer-0.10/:

	Fix gst_bus_sync_signal_handler binding, fixes bug 559721

	* vapi/gstreamer-0.10.vapi: regenerated

2008-12-16  Jürg Billeter  <j@bitron.ch>

	* vala/valadelegate.vala:
	* vala/valamethodcall.vala:
	* vala/valaparser.vala:
	* gobject/valaccodedelegatemodule.vala:

	Support delegates throwing errors, fixes bug 557332

2008-12-16  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/json-glib-1.0/:

	Various ownership fixes, patch by Evan Nemerson, fixes bug 547450

	* vapi/json-glib-1.0.vapi: regenerated

2008-12-16  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi:

	Add g_string_truncate binding, patch by Yu Feng, fixes bug 564428

2008-12-16  Jürg Billeter  <j@bitron.ch>

	* vapi/sqlite3.vapi:

	Add transaction hook, tracing, profiling, and mutex bindings,
	patch by Evan Nemerson, fixes bug 564571

2008-12-16  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodebasemodule.vala: