@@ -1,5 +1,12 @@
 2008-12-16  Jürg Billeter  <j@bitron.ch>
 
+	* gobject/valaccodebasemodule.vala:
+	* vapi/glib-2.0.vapi:
+
+	Fix GByteArray binding, patch by Evan Nemerson, fixes bug 561867
+
+2008-12-16  Jürg Billeter  <j@bitron.ch>
+
 	* vapi/packages/gdk-pixbuf-2.0/:
 
 	Fix gdk_pixbuf_new_from_stream* bindings, patch by Evan Nemerson,
